k8s-manifests/base/postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: cloud-cost-optimizer
spec:
  selector:
    app: postgres-v2
  ports:
  - port: 5432
    targetPort: 5432
  clusterIP: None
